Changes in mirt 1.4

MAJOR CHANGES

  - changed default `theta_lim` to `c(-6,6)` and number of quadrature defaults
  increased as well

  - `@Data` slot added for organizing data based arguments. Removed several
  data slots from estimated objects as a consequence

  - removed 'Freq' column when passing a `response.pattern` argument to
  `fscores()`

  - increase number of Mstep iterations proportionally in quasi-Newton
  algorithms as the estimation approaches the ML location

  - 'rsm' itemtype removed for now until optimized version is implemented

NEW FEATURES

  - new `survey.weights` argument can be passed to parameter estimation
  functions (i.e., `mirt()`) to apply so-called stratification/survey-weights
  during estimation

  - `returnList` argument added to `simdata()` to return a list containing
  the S4 item objects, Theta matrix, and simulated data

  - support custom item type `fscores()` computations when `response.pattern`
  is passed instead of the original data

  - `impute` option for `itemfit()` and `M2()` to estimate statistics via
  plausible imputation when missing data are present

  - multidimensional ideal-point models added for dichotomous items

  - M2* statistic added for polytomous item types

BUG FIXES

  - large bias correction in information matrix and standard errors for
  models that contain equality constraints (standard errors were too high)

  - drop dimensions fix for nested logit models

Changes in mirt 1.3

MAJOR CHANGES

  - default `SE.type` changed to `crossprod` since it is better at detecting
  when models are not identified compared to `SEM`, and is generally much
  cheaper to compute for larger models

  - M-step optimizer now automatically selected to be 'BFGS' if there are
  no bounded parameters, and 'L-BFGS-B' otherwise. Some models will have
  notably different parameter estimates because of this, but should have
  nearly identical model log-likelihoods
